<resources>
    <string name="app_name">Kings Cup</string>
    <string name="new_game">New Game</string>
    <string name="join_game">Join Game</string>
    <string name="options">Options</string>
    <string name="about">About</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="enter_room_id">enter room id</string>
    <string name="connect">Connect</string>
    <string name="deck_view">Deck View</string>
    <string name="leave">Leave</string>
    <string name="room_id">Room ID</string>
    <string name="start">Start</string>
    <string name="players">Players</string>
    <string name="back">Back</string>
    <string name="playerCount">Players %1$d/12</string>
    <string name="devCode">DEVDEV</string>
    <string name="kick">Kick</string>
    <string name="nickname">Nickname</string>
    <string name="nick">nick</string>
    <string name="default_gender">Default Gender</string>
    <string name="card_texture">Card texture</string>
    <string name="texture_quality">Texture quality</string>
    <string name="choose">Choose</string>
    <string name="go_to_lobby">Go to lobby</string>
    <string name="game_ended">Game Ended</string>
    <string name="about_text">
        About
        \n\n\n\n
        This is a mobile implementation of Kings Cup card game.
        You can play this party game without need to directly meet with your friends.
        Now you can join them via any communication platform and enjoy your kings cup game!
        \n\n\n\n\n
        Link to original game on Wiki
        \n
        en.wikipedia.org/wiki/Kings_(game)
        \n\n\n
        You can also visit our github project page
        \n
        github.com/kuzn1/KingsCup
    </string>
    <string name="returnWaitForCreator">Room creator must first return to lobby</string>
    <string name="server_down">Server is down</string>
    <string name="enable_sounds">Enable sounds</string>
    <string name="card">Card</string>
    <string name="HostLeft">Host left game</string>
    <string name="HostIsBack">Host is back in lobby</string>
    <string name="kickOutMsg">You got kick out!</string>
    <string name="playerStringHasDisconnected">player %1$s disconnected</string>
    <string name="otherPlayersDrink">Other players drink</string>
    <string name="youHaveToTakeADrink">You have to take a drink</string>
    <string name="done">Done</string>
    <string name="playerChoosesAnotherPlayer">Player %1$s chooses another player</string>
    <string name="playerStringHaveToTakeADrink">Player %1$s have to take a drink</string>
    <string name="everyMaleHasToTakeADrink">Every male have to take a drink</string>
    <string name="everyFemaleHasToTakeADrink">Every female has to take a drink</string>
    <string name="randomPlayersDrink">Random players drink\nYou where lucky :)</string>
    <string name="playerStringChoosesAnotherPlayer">Player %1$s chooses another player</string>
    <string name="youHaveToFinishDrink">You have to finish your drink</string>
    <string name="answer">Answer</string>
    <string name="readyForNext">Ready for next round?</string>
    <string name="yes">Yes</string>
    <string name="enterQuestion">Enter question</string>
    <string name="question">question</string>
    <string name="wrongMove">Wrong move :(</string>
    <string name="timeout">Timeout :(</string>
    <string name="yourTimems">Your time %1$s ms</string>
    <string name="playerAnswersQuestion">Player %1$s answers question</string>
    <string name="questionAnswer">Question: %1$s\nAnswer: %2$s</string>
    <string name="startingGame">Starting the game</string>
    <string name="notEnoughPlayers">Not enough players</string>
    <string name="youAreNoTheLastOne">You are not the last one\n\n %1$s</string>
    <string name="kickedPlayer">Kicked player:</string>
    <string name="wrongId">Wrong ID</string>
    <string-array name="card_name">
        <item>Ace Save</item>
        <item>Two for You</item>
        <item>Three for Me</item>
        <item>Four Floor</item>
        <item>Five Guys</item>
        <item>Six Chicks</item>
        <item>Seven Heven</item>
        <item>Eight Random</item>
        <item>Nine WIP</item>
        <item>Ten WIP</item>
        <item>Jack WIP</item>
        <item>Queen Question</item>
        <item>Kings Cup</item>
    </string-array>
    <string-array name="card_texture_name_array">
        <item>Default</item>
        <item>Dark</item>
    </string-array>
    <string-array name="texture_quality_name_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string-array name="card_description_array">
        <item>Ace Safe\nEveryone except the person who drew a card has to take a drink</item>
        <item>Two for You\nPerson who drew a card choose who will take a drink</item>
        <item>Three for Me\nPerson who drew a card has to take a drink</item>
        <item>Four Floor\nEveryone have to lower their phone to the ground as fast as possible. Worst time has to take a drink</item>
        <item>Five Guys\nEvery male player has to take a drink</item>
        <item>Six Chicks\nEvery female player has to take a drink</item>
        <item>Seven Heaven\nEveryone have to rise their phone up as fast as possible. Worst time has to take a drink</item>
        <item>Eight Random\nRandom person has to take a drink</item>
        <item>Nine WIP</item>
        <item>Ten WIP</item>
        <item>Jack WIP</item>
        <item>Queen Question\nPerson who drew a card choose player and question. He has answer or take a drink</item>
        <item>Kings Cup\nEveryone has to finish their drink</item>
    </string-array>
</resources>