<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:ignore="ContentDescription"
        android:layout_width="match_parent"
        tools:context=".LobbyActivity"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background">

    <ImageView
            android:layout_width="210dp"
            android:layout_height="174dp"
            android:src="@drawable/crown" android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.05"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:textSize="36sp"
            android:textStyle="bold"
            android:id="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>

    <CheckBox
            android:text="@string/male"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:id="@+id/maleCheckBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.42"
            android:textSize="24sp"
            android:textAlignment="viewStart"
            android:onClick="onCheck"/>

    <CheckBox
            android:text="@string/female"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:id="@+id/femaleCheckBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.42"
            android:textSize="24sp"
            android:onClick="onCheck"/>

    <Button
            style="@style/buttonStyle"
            android:text="@string/start"
            android:id="@+id/startButton"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.5"
            android:onClick="onClick"/>

    <Button
            style="@style/buttonStyle"
            android:text="@string/players"
            android:id="@+id/playersButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.6"
            android:onClick="onClick"/>

    <Button
            style="@style/buttonStyle"
            android:text="@string/deck_view"
            android:id="@+id/deckButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.7"
            android:onClick="onClick"/>

    <Button
            style="@style/buttonStyle"
            android:text="@string/leave"
            android:id="@+id/leaveButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            android:onClick="onClick"/>

    <TextView
            android:text="@string/room_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintBottom_toTopOf="@+id/idTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/leaveButton"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/devCode" android:textSize="36sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.93"
            android:textAlignment="center"/>

    <TextView
            android:text="@string/playerCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerCountTextView"
            app:layout_constraintTop_toBottomOf="@+id/idTextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.3"/>

</androidx.constraintlayout.widget.ConstraintLayout>