<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:ignore="ContentDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.menu.MainActivity"
        android:background="@drawable/gradient_background">
    <TextView

            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:textSize="36sp"
            android:textStyle="bold" android:id="@+id/textView" app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    <ImageView
            android:layout_width="210dp"
            android:layout_height="174dp"
            android:src="@drawable/crown" android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.05"/>
    <Button
            style="@style/buttonStyle"
            android:id="@+id/playButton"
            android:text="@string/new_game"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.2"
            android:onClick="onClick"/>
    <Button
            style="@style/buttonStyle"
            android:id="@+id/joinButton"
            android:text="@string/join_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.4"
            android:onClick="onClick"/>
    <Button
            style="@style/buttonStyle"
            android:id="@+id/optionsButton"
            android:text="@string/options"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.6"
            android:onClick="onClick"/>
    <Button
            style="@style/buttonStyle"
            android:id="@+id/aboutButton"
            android:text="@string/about"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.8"
            android:onClick="onClick"/>
</androidx.constraintlayout.widget.ConstraintLayout>