<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:ignore="ContentDescription"
        android:layout_width="match_parent"
        tools:context=".activity.game.EndGameActivity"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background">

    <ImageView
            android:layout_width="210dp"
            android:layout_height="174dp"
            android:src="@drawable/crown" android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.05"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:textSize="36sp"
            android:textStyle="bold"
            android:id="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>

    <TextView
            android:text="@string/game_ended"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="30sp"
            android:textStyle="bold"
            android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintBottom_toTopOf="@+id/lobbyButton"/>

    <Button
            style="@style/buttonStyle"
            android:text="@string/go_to_lobby"
            android:id="@+id/lobbyButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.6"
            android:onClick="lobby"/>

    <Button
            style="@style/buttonStyle"
            android:text="@string/leave"
            android:id="@+id/leaveButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7"
            android:onClick="leave"/>

</androidx.constraintlayout.widget.ConstraintLayout>