<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".activity.menu.OptionsActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="30dp"
            app:layout_constraintBottom_toTopOf="@+id/backButton"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="15dp">

                <TextView
                        android:text="@string/nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:id="@+id/textView1"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textStyle="bold"/>

                <EditText
                        android:id="@+id/nickInput"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:maxLength="14"
                        android:inputType="text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:importantForAutofill="no"
                        android:hint="@string/nick"
                        android:textAlignment="center"
                        app:layout_constraintTop_toBottomOf="@+id/textView1"
                        app:layout_constraintStart_toStartOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="15dp">

                <TextView
                        android:text="@string/default_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:id="@+id/textView2"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textStyle="bold"/>

                <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:id="@+id/space"
                        app:layout_constraintTop_toBottomOf="@+id/textView2"/>

                <CheckBox
                        android:text="@string/male"
                        android:layout_width="120sp"
                        android:layout_height="wrap_content"
                        android:id="@+id/maleCheckBox"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:onClick="onGenderCheck"
                        app:layout_constraintStart_toEndOf="@+id/space"
                        app:layout_constraintTop_toBottomOf="@+id/textView2"/>

                <CheckBox
                        android:text="@string/female"
                        android:layout_width="120sp"
                        android:layout_height="wrap_content"
                        android:id="@+id/femaleCheckBox"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textSize="18sp"
                        android:onClick="onGenderCheck"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toStartOf="@+id/space"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="15dp">

                <TextView
                        android:text="@string/card_texture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:id="@+id/textView3"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textStyle="bold"/>

                <Spinner
                        android:id="@+id/textureSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/textView3"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="15dp">

                <TextView
                        android:text="@string/texture_quality"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:id="@+id/textView4"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textStyle="bold"/>

                <Spinner
                        android:id="@+id/qualitySpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/textView4"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </TableLayout>

    </ScrollView>

    <Button
            style="@style/buttonStyle"
            android:id="@+id/backButton"
            android:text="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.95"
            android:onClick="back"
            app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
